spi-plugin:fix add bs rel dynamic log.

--- a/spi/spi-plugin/Cargo.toml
+++ b/spi/spi-plugin/Cargo.toml
@@ -23,7 +23,9 @@ serde.workspace = true
 async-trait.workspace = true
 tardis = { workspace = true, features = ["reldb-postgres", "web-server"] }
 bios-basic = { path = "../../basic", features = ["default"] }
+bios-sdk-invoke = { path = "../../sdk/invoke", features = ["default"] }
 
 [dev-dependencies]
 tardis = { workspace = true, features = ["test", "ws-client"] }
 bios-basic = { path = "../../basic", features = ["default", "test"] }
+bios-sdk-invoke = { path = "../../sdk/invoke", features = ["default"] }
