--- a/Cargo.toml
+++ b/Cargo.toml
@@ -37,6 +37,7 @@ strip = true
 
 [workspace.dependencies]
 # basic
+async-recursion = { version = "1.0.4" }
 serde = { version = "1", features = ["derive"] }
 serde_json = { version = "1" }
 async-trait = { version = "0.1" }
