--- a/middleware/flow/Cargo.toml
+++ b/middleware/flow/Cargo.toml
@@ -18,6 +18,7 @@ path = "src/lib.rs"
 serde.workspace = true
 serde_json.workspace = true
 async-trait.workspace = true
+async-recursion.workspace = true
 lazy_static.workspace = true
 itertools.workspace = true
 tardis = { workspace = true, features = ["reldb-postgres", "web-client"] }
