--- a/basic/Cargo.toml
+++ b/basic/Cargo.toml
@@ -22,6 +22,7 @@ default = [
     "tardis/web-client",
     "tardis/reldb-postgres",
     "tardis/cache",
+    "tardis/mq",
 ]
 # TODO remvoe
 with-mq = ["tardis/mq"]
