--- a/support/reach/Cargo.toml
+++ b/support/reach/Cargo.toml
@@ -15,6 +15,8 @@ name = "bios_reach"
 path = "src/lib.rs"
 
 [features]
+default = []
+simple-client = []
 
 [dependencies]
 serde.workspace = true
@@ -33,3 +35,7 @@ bios-sdk-invoke = { path = "../../sdk/invoke", features = [
 tardis = { workspace = true, features = ["test"] }
 
 bios-basic = { path = "../../basic", features = ["default", "test"] }
+
+bios-reach = { path = "./", features = ["simple-client"] }
+
+simple-invoke-client-macro = { path = "../../sdk/simple-invoke-client-macro" }
