--- a/support/reach/Cargo.toml
+++ b/support/reach/Cargo.toml
@@ -30,8 +30,9 @@ tardis = { workspace = true, features = [
 bios-basic = { path = "../../basic", features = ["default"] }
 bios-sdk-invoke = { path = "../../sdk/invoke", features = [
     "iam",
+    "macro"
 ], default-features = false }
-simple-invoke-client-macro = { path = "../../sdk/simple-invoke-client-macro" }
+# simple-invoke-client-macro = { path = "../../sdk/simple-invoke-client-macro" }
 
 [dev-dependencies]
 tardis = { workspace = true, features = ["test"] }
