--- a/middleware/flow/tests/config/conf-default.toml
+++ b/middleware/flow/tests/config/conf-default.toml
@@ -4,7 +4,9 @@
 [csm.flow]
 
 [csm.flow.invoke]
-spi_app_id = ""
+spi_app_id = "app001"
+[csm.flow.invoke.module_urls]
+Kv = "https://localhost:8080/spi-kv"
 
 [fw.web_server]
 port = 8080
@@ -64,5 +66,8 @@ FZygs8miAhWPzqnpmgTj1cPiU1M=
 -----END CERTIFICATE-----
 """
 [fw.web_server.modules.flow]
+[fw.web_server.modules.spi-kv]
+[fw.web_server.modules.mock]
+
 title = "Flow Component"
 doc_urls = [["test env", "http://localhost:8080/"]]
