add some reach test cases

--- a/support/reach/tests/config/conf-default.toml
+++ b/support/reach/tests/config/conf-default.toml
@@ -2,7 +2,7 @@
 cache_key_res_changed_timer_sec = 1
 [csm.reach]
 [csm.reach.sms]
-base_url = "http://localhost:8080/test_sms_server"
+base_url = "http://localhost:8081"
 [csm.reach.invoke]
 
 [fw.web_server]
