--- a/support/reach/Cargo.toml
+++ b/support/reach/Cargo.toml
@@ -40,4 +40,5 @@ tardis = { workspace = true, features = ["test"] }
 bios-basic = { path = "../../basic", features = ["default", "test"] }
 
 bios-reach = { path = "./", features = ["simple-client"] }
+axum = "0.6.19"
 
