add anti_replay test

--- a/gateway/spacegate/res/spacegate-gateway.yaml
+++ b/gateway/spacegate/res/spacegate-gateway.yaml
@@ -157,7 +157,7 @@ spec:
       serviceAccountName: spacegate
       containers:
       - name: spacegate
-        image: ecfront/spacegateway:latest
+        image: ecfront/bios-spacegate:latest
         imagePullPolicy: IfNotPresent
 #        env:
 #        - name: RUST_LOG
