--- a/basic/Cargo.toml
+++ b/basic/Cargo.toml
@@ -35,6 +35,7 @@ lazy_static.workspace = true
 itertools.workspace = true
 fancy-regex.workspace = true
 tardis = { workspace = true, optional = true }
+strum = { workspace = true }
 
 [dev-dependencies]
 tardis = { workspace = true, features = ["test"] }
