--- a/gateway/spacegate/Cargo.toml
+++ b/gateway/spacegate/Cargo.toml
@@ -35,7 +35,7 @@ spacegate-kernel = { git = "https://github.com/ideal-world/spacegate.git", featu
 
 jsonpath-rust = "0.3.1"
 bios-auth = { path = "../../support/auth" }
-tardis = { workspace = true, features = ["web-server", "web-client"] }
+tardis = { workspace = true, features = ["web-client"] }
 ipnet = "2.8.0"
 [dev-dependencies]
 tardis = { workspace = true, features = ["test", "web-client"] }
