--- a/gateway/spacegate/Cargo.toml
+++ b/gateway/spacegate/Cargo.toml
@@ -34,7 +34,7 @@ spacegate-kernel = { git = "https://github.com/ideal-world/spacegate.git", featu
 # ] }
 
 jsonpath-rust = "0.3.1"
-bios-auth = { path = "../../support/auth" }
+bios-auth = { path = "../../support/auth", default-features = false }
 tardis = { workspace = true, features = ["web-client"] }
 ipnet = "2.8.0"
 [dev-dependencies]
