--- a/services/bios-all/Cargo.toml
+++ b/services/bios-all/Cargo.toml
@@ -14,7 +14,7 @@ publish.workspace = true
 serde.workspace = true
 tardis = { workspace = true, features = ["web-server", "conf-remote"] }
 bios-iam = { path = "../../support/iam", features = ["spi_search", "spi_kv"] }
-bios-auth = { path = "../../support/auth" }
+bios-auth = { path = "../../support/auth", features = ["web-server"] }
 
 bios-spi-cache = { path = "../../spi/spi-cache" }
 bios-spi-graph = { path = "../../spi/spi-graph" }
@@ -25,7 +25,7 @@ bios-spi-plugin = { path = "../../spi/spi-plugin" }
 bios-spi-reldb = { path = "../../spi/spi-reldb" }
 bios-spi-search = { path = "../../spi/spi-search" }
 bios-spi-stats = { path = "../../spi/spi-stats" }
-bios-spi-conf = { path = "../../spi/spi-conf"}
+bios-spi-conf = { path = "../../spi/spi-conf" }
 
 bios-mw-schedule = { path = "../../middleware/schedule" }
 bios-mw-flow = { path = "../../middleware/flow" }
