--- a/.github/workflows/service-all-release.yml
+++ b/.github/workflows/service-all-release.yml
@@ -33,7 +33,7 @@ jobs:
         run: cargo clippy --all-features
 
       - name: Build rust
-        run: cargo build --release
+        run: cargo build --release -p bios-serv-all
 
       - name: Copy binary to workspace
         run: cp ./target/release/bios-serv-all ./services/bios-all/
