--- a/spi/spi-conf/tests/config/conf-default.toml
+++ b/spi/spi-conf/tests/config/conf-default.toml
@@ -2,8 +2,9 @@
 [csm.spi-reldb]
 [csm.spi-conf]
 token_ttl = 18000
-grpc_port = 9080
-grpc_host = "::0"
+nacos_port = 8848
+nacos_grpc_port = 9848
+nacos_host = "::0"
 [fw.web_server]
 enabled = true
 port = 8080
