--- a/services/spi-all/Cargo.toml
+++ b/services/spi-all/Cargo.toml
@@ -26,4 +26,4 @@ bios-spi-plugin = { path = "../../spi/spi-plugin" }
 bios-spi-reldb = { path = "../../spi/spi-reldb" }
 bios-spi-search = { path = "../../spi/spi-search" }
 bios-spi-stats = { path = "../../spi/spi-stats" }
-bios-spi-conf = { path = "../../spi/spi-conf"}
+# bios-spi-conf = { path = "../../spi/spi-conf"}
