--- a/Cargo.toml
+++ b/Cargo.toml
@@ -48,5 +48,5 @@ run_script = { version = "0.10" }
 strum ={ version = "0.25", features = ["derive"] }
 # tardis
 # tardis = { version = "=0.1.0-beta.11" }
-tardis = { path = "../tardis/tardis" }
-# tardis = { git = "https://github.com/ideal-world/tardis.git" }
+# tardis = { path = "../tardis/tardis" }
+tardis = { git = "https://github.com/ideal-world/tardis.git", rev = "9424e16" }
