--- a/spi/spi-plugin/Cargo.toml
+++ b/spi/spi-plugin/Cargo.toml
@@ -24,6 +24,7 @@ async-trait.workspace = true
 tardis = { workspace = true, features = ["reldb-postgres", "web-server"] }
 bios-basic = { path = "../../basic", features = ["default"] }
 bios-sdk-invoke = { path = "../../sdk/invoke", features = ["default"] }
+strum = { workerspace = true, features = ["derive"] }
 
 [dev-dependencies]
 tardis = { workspace = true, features = ["test", "ws-client"] }
