--- a/.github/workflows/service-all-release.yml
+++ b/.github/workflows/service-all-release.yml
@@ -13,6 +13,9 @@ jobs:
       packages: write
       contents: read
     steps:
+      - name: Install Protoc
+        uses: arduino/setup-protoc@v1
+      
       - name: Check out the repo
         uses: actions/checkout@v3
 
