--- a/gateway/spacegate/Cargo.toml
+++ b/gateway/spacegate/Cargo.toml
@@ -37,6 +37,7 @@ jsonpath-rust = "0.3.1"
 bios-auth = { path = "../../support/auth", default-features = false }
 tardis = { workspace = true, features = ["web-client"] }
 ipnet = "2.8.0"
+strum ={ workspace = true, features = ["derive"] }
 [dev-dependencies]
 tardis = { workspace = true, features = ["test", "web-client"] }
 
