--- a/sdk/invoke/Cargo.toml
+++ b/sdk/invoke/Cargo.toml
@@ -25,6 +25,7 @@ reldb-core=["tardis/reldb-core"]
 serde.workspace = true
 lazy_static.workspace = true
 itertools.workspace = true
+strum = { workspace = true }
 tardis = { workspace = true, features = ["web-server"] }
 [dev-dependencies]
 tardis = { workspace = true, features = ["test"] }
