--- a/support/reach/Cargo.toml
+++ b/support/reach/Cargo.toml
@@ -30,10 +30,9 @@ tardis = { workspace = true, features = [
 bios-basic = { path = "../../basic", features = ["default"] }
 bios-sdk-invoke = { path = "../../sdk/invoke", features = [
     "iam",
-    "macro"
+    "macro",
 ], default-features = false }
 # simple-invoke-client-macro = { path = "../../sdk/simple-invoke-client-macro" }
-
 [dev-dependencies]
 tardis = { workspace = true, features = ["test"] }
 
@@ -41,3 +40,5 @@ bios-basic = { path = "../../basic", features = ["default", "test"] }
 
 bios-reach = { path = "./", features = ["simple-client"] }
 toml = "*"
+
+bios-client-hwsms = { path = "../../clients/hwsms", features = ["reach"] }
