--- a/sdk/invoke/Cargo.toml
+++ b/sdk/invoke/Cargo.toml
@@ -28,7 +28,13 @@ reldb-core=["tardis/reldb-core"]
 serde.workspace = true
 lazy_static.workspace = true
 itertools.workspace = true
-tardis = { workspace = true, features = ["web-server"] }
+tardis = { workspace = true, features = ["web-server", "web-client", "crypto"] }
 simple-invoke-client-macro = { path = "../simple-invoke-client-macro", optional = true}
 [dev-dependencies]
 tardis = { workspace = true, features = ["test"] }
+simple-invoke-client-macro = { path = "../simple-invoke-client-macro" }
+
+
+[[test]]
+name = "test_macros"
+features = ["macro"]
