--- a/Cargo.toml
+++ b/Cargo.toml
@@ -4,7 +4,7 @@ members = [
     "basic",
     "spi/*",
     "gateway/test",
-    "gateway/spacegate",
+    "gateway/spacegate-lib",
     "middleware/*",
     "support/iam",
     "support/auth",
@@ -52,3 +52,10 @@ strum ={ version = "0.25", features = ["derive"] }
 tardis = { version = "=0.1.0-beta.12" }
 # tardis = { path = "../tardis/tardis" }
 # tardis = { git = "https://github.com/ideal-world/tardis.git", rev = "9424e16" }
+
+#spacegate
+spacegate-kernel = { git = "https://github.com/ideal-world/spacegate.git", rev = "1d0bf2593efab948e495c31c0c77fc617911b457",features = [
+    "ws",
+    "cache",
+    "k8s",
+] }
