fix-spacegate-cicd-watch-path

--- a/.github/workflows/space-gateway-docker-push.yml
+++ b/.github/workflows/space-gateway-docker-push.yml
@@ -4,6 +4,7 @@ on:
   push:
     paths:
       - "gateway/spacegate-lib/**"
+      - "support/auth/**"
       - "services/spacegate/**"
       - ".github/workflows/space-gateway-docker-push.yml"
 
