--- a/spi/spi-conf/tests/config/conf-default.toml
+++ b/spi/spi-conf/tests/config/conf-default.toml
@@ -64,3 +64,6 @@ title = "配置服务"
 doc_urls = [["test env", "http://localhost:8080/"]]
 uniform_error = false
 [fw.web_server.modules.spi-conf-nacos]
+
+[fw.log]
+level = "debug"
