Update to tardis 0.1.0 rc.2 (#502)

--- a/support/auth/Cargo.toml
+++ b/support/auth/Cargo.toml
@@ -28,6 +28,6 @@ tardis = { workspace = true, features = [
     "crypto-with-sm",
     "future",
 ] }
-
 [dev-dependencies]
+testcontainers-modules = { workspace = true }
 tardis = { workspace = true, features = ["test", "web-client"] }
