--- a/gateway/spacegate-lib/Cargo.toml
+++ b/gateway/spacegate-lib/Cargo.toml
@@ -23,8 +23,10 @@ jsonpath-rust = "0.3.1"
 bios-auth = { path = "../../support/auth", default-features = false }
 tardis = { workspace = true, features = ["web-client"] }
 ipnet = "2.8.0"
+
 [dev-dependencies]
 pprof = { version = "0.12.1", features = ["flamegraph"] }
 tardis = { workspace = true, features = ["test", "web-client"] }
 
 tracing-subscriber = { version = "0.3", features = ["env-filter"] }
+testcontainers-modules = { workspace = true }
