add `.git` to ignore dirs

--- a/.github/workflows/leak_checker.yml
+++ b/.github/workflows/leak_checker.yml
@@ -14,4 +14,4 @@ jobs:
         with:
           keywords: ${{secrets.LEAK_WORDS}}
           ignoreCase: true
-          ignoredDirs: '["architecture.png"]'
+          ignoredDirs: '["architecture.png", ".git"]'
