--- a/Cargo.toml
+++ b/Cargo.toml
@@ -54,13 +54,13 @@ tardis = { version = "=0.1.0-rc.2" }
 # tardis = { path = "../tardis/tardis" }
 # tardis = { git = "https://github.com/ideal-world/tardis.git", rev = "9424e16" }
 #spacegate
-#spacegate-kernel = { git = "https://github.com/ideal-world/spacegate.git", rev = "23dd661ec",features = [
-#    "ws",
-#    "cache",
-#    "k8s",
-#] }
-spacegate-kernel = { path = "../spacegate/kernel",features = [
+spacegate-kernel = { git = "https://github.com/ideal-world/spacegate.git", rev = "4c2706d",features = [
     "ws",
     "cache",
     "k8s",
 ] }
+#spacegate-kernel = { path = "../spacegate/kernel",features = [
+#    "ws",
+#    "cache",
+#    "k8s",
+#] }
