--- a/spi/spi-conf/Cargo.toml
+++ b/spi/spi-conf/Cargo.toml
@@ -35,11 +35,15 @@ poem = "1"
 prost-types = "0.11.9"
 strum = { version = "0.25.0", features = ["derive"] }
 tokio-stream = { version = "0.1.14", features = ["sync"] }
-
+bios-sdk-invoke = { path = "../../sdk/invoke", features = [
+    "iam",
+    "macro",
+], default-features = false }
+ipnet = { version = "2", features = ["serde"] }
 [dev-dependencies]
 tardis = { workspace = true, features = ["test", "conf-remote", "mq"] }
 bios-basic = { path = "../../basic", features = ["default", "test"] }
 reqwest = "*"
 testcontainers-modules = { workspace = true }
 [build-dependencies]
-poem-grpc-build = "0.2.21"
+poem-grpc-build = "0.2.22"
