--- a/middleware/event/Cargo.toml
+++ b/middleware/event/Cargo.toml
@@ -18,7 +18,7 @@ path = "src/lib.rs"
 serde.workspace = true
 async-trait.workspace = true
 lazy_static.workspace = true
-tardis = { workspace = true, features = ["reldb-postgres", "web-server", "ws-client"] }
+tardis = { workspace = true, features = ["reldb-postgres", "web-server", "ws-client", "cluster"] }
 bios-basic = { path = "../../basic", features = ["default"] }
 
 [dev-dependencies]
