--- a/middleware/event/Cargo.toml
+++ b/middleware/event/Cargo.toml
@@ -20,7 +20,7 @@ async-trait.workspace = true
 lazy_static.workspace = true
 tardis = { workspace = true, features = ["reldb-postgres", "web-server", "ws-client", "cluster"] }
 bios-basic = { path = "../../basic", features = ["default"] }
-
 [dev-dependencies]
-tardis = { workspace = true, features = ["test", "ws-client"] }
+tardis = { workspace = true, features = ["test", "ws-client", "cluster", "web-server"] }
 bios-basic = { path = "../../basic", features = ["default", "test"] }
+tokio = { version = "1", features = ["full"] }
