--- a/middleware/event/tests/config/conf-default.toml
+++ b/middleware/event/tests/config/conf-default.toml
@@ -9,3 +9,7 @@ port = 8080
 [fw.web_server.modules.event]
 title = "事件服务"
 doc_urls = [["test env", "http://localhost:8080/"]]
+
+[fw.cluster]
+watch_kind = "cache"
+cache_check_interval_sec = 10
