--- a/middleware/event/Cargo.toml
+++ b/middleware/event/Cargo.toml
@@ -20,6 +20,9 @@ async-trait.workspace = true
 lazy_static.workspace = true
 tardis = { workspace = true, features = ["reldb-postgres", "web-server", "ws-client", "cluster"] }
 bios-basic = { path = "../../basic", features = ["default"] }
+bios-sdk-invoke = { path = "../../sdk/invoke", features = [
+    "spi_log",
+], default-features = false }
 [dev-dependencies]
 tardis = { workspace = true, features = ["test", "ws-client", "cluster", "web-server"] }
 bios-basic = { path = "../../basic", features = ["default", "test"] }
