--- a/basic/Cargo.toml
+++ b/basic/Cargo.toml
@@ -38,9 +38,10 @@ fancy-regex.workspace = true
 tardis = { workspace = true, optional = true }
 strum = { workspace = true }
 testcontainers-modules ={ workspace = true }
+bios-sdk-invoke = { path = "../sdk/invoke", features = ["default"] }
 [dev-dependencies]
 tardis = { workspace = true, features = ["test"] }
-
+bios-sdk-invoke = { path = "../sdk/invoke", features = ["default"] }
 [[test]]
 name = "test_rbum"
 required-features = ["default", "with-mq", "test"]
