--- a/sdk/invoke/Cargo.toml
+++ b/sdk/invoke/Cargo.toml
@@ -15,7 +15,7 @@ name = "bios_sdk_invoke"
 path = "src/lib.rs"
 
 [features]
-default = ["spi_kv", "spi_log", "spi_search", "iam"]
+default = ["spi_kv", "spi_log", "spi_search", "iam", "event"]
 spi_base = []
 spi_kv = ["spi_base"]
 spi_log = ["spi_base"]
@@ -23,14 +23,19 @@ spi_search = ["spi_base"]
 iam = []
 event = []
 macro = ["dep:simple-invoke-client-macro"]
-reldb-core=["tardis/reldb-core"]
+reldb-core = ["tardis/reldb-core"]
 
 [dependencies]
 serde.workspace = true
 lazy_static.workspace = true
 itertools.workspace = true
-tardis = { workspace = true, features = ["web-server", "web-client", "crypto", "ws-client"] }
-simple-invoke-client-macro = { path = "../simple-invoke-client-macro", optional = true}
+tardis = { workspace = true, features = [
+  "web-server",
+  "web-client",
+  "crypto",
+  "ws-client",
+] }
+simple-invoke-client-macro = { path = "../simple-invoke-client-macro", optional = true }
 [dev-dependencies]
 tardis = { workspace = true, features = ["test"] }
 simple-invoke-client-macro = { path = "../simple-invoke-client-macro" }
