--- a/services/bios-all/Cargo.toml
+++ b/services/bios-all/Cargo.toml
@@ -12,7 +12,12 @@ publish.workspace = true
 
 [dependencies]
 serde.workspace = true
-tardis = { workspace = true, features = ["web-server", "conf-remote", "cluster"] }
+tardis = { workspace = true, features = [
+  "web-server",
+  "conf-remote",
+  "cluster",
+  "k8s",
+] }
 bios-iam = { path = "../../support/iam", features = ["spi_search", "spi_kv"] }
 bios-auth = { path = "../../support/auth", features = ["web-server"] }
 bios-reach = { path = "../../support/reach" }
